production-ingress-http/bork-ingress-resource-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: borkbot-http
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.slack.cphillips.io
    http:
      paths:
      - backend:
          serviceName: borkd-service-prod
          servicePort: 80
        path: /borkbot/v1
